# multiplayer-snake

./: .gitignore  config.jsonc  contributing.txt  license  readme.md  requirements.txt  setup.cfg
multiplayer_snake/: config.jsonc  constants.py
multiplayer_snake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
multiplayer_snake/client/: client.py  food.py  snake.py
multiplayer_snake/client/states/: client_join.py  game.py  state.py  state_info.py  waiting_player_join_state.py  waiting_substate.py
multiplayer_snake/server/: server.py
multiplayer_snake/shared/: common.py  config_parser.py  hisock_tools.py  pygame_tools.py  shared_game.py  tools.py
src/: client.py  common.py  config_parser.py  constants.py  pygame_tools.py  server.py  shared_game.py  tools.py
