[metadata]
name = multiplayer-snake
description = Snake, but multiplayer
author = sheepy0125
version = 0.0.1 ALPHA
license = MIT
license_file = license
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3.10 :: Only

[options]
packages = 
    multiplayer-snake
install_requires =
    hisock >= 1.2.0  # note: refac-hisock
    pygame >= 1.9.6
    pygame_gui >= 0.5.6
    jsonc_parser >= 1.0.0
package_dir =
    multiplayer-snake = multiplayer_snake
zip_safe = no